[tool.poetry]
name = "mdmaker"
version = "0.0.2"
description = "A simple Python API for programmatically creating Markdown files"
authors = ["Rui <oyr13824761386@outlook.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "mdmaker" }]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
